- disabled startup notifing (aka kick out busy cursor in gnome)
Changed files:
    blender.desktop -> 1.4

--- a/blender.desktop
+++ b/blender.desktop
@@ -7,6 +7,6 @@ Exec=blender
 Terminal=false
 Type=Application
 Icon=blender.png
-StartupNotify=true
+StartupNotify=false
 Categories=Graphics;
 # vi: encoding=utf-8
