--- a/blender.desktop
+++ b/blender.desktop
@@ -8,5 +8,5 @@ Terminal=false
 Type=Application
 Icon=blender.png
 StartupNotify=false
-Categories=Graphics;
+Categories=Graphics;3DGraphics;
 # vi: encoding=utf-8
