--- a/blender.desktop
+++ b/blender.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=Blender
 Comment=3D modeling, rendering, animation and game creation package
 Comment[pl]=Pakiet do tworzenia animacji 3D oraz gier
 Exec=blender
 Terminal=false
 Type=Application
-Icon=blender.png
+Icon=blender
 StartupNotify=false
 Categories=Graphics;3DGraphics;
 # vi: encoding=utf-8
