- provide application/x-blender MIME type
Changed files:
    blender.desktop -> 1.7

--- a/blender.desktop
+++ b/blender.desktop
@@ -8,4 +8,5 @@ Type=Application
 Icon=blender
 StartupNotify=false
 Categories=Graphics;3DGraphics;
+MimeType=application/x-blender;
 # vi: encoding=utf-8
